--- a/pages/pages.css
+++ b/pages/pages.css
@@ -21,10 +21,10 @@ body {
     height: 30rem;
     position: relative;
   }
-  .about-header .image-container {
-    /* display: block;
-    width: 30rem; */
-  }
+  /* .about-header .image-container {
+    display: block;
+    width: 30rem;
+  } */
   .text-container {
     position: absolute;
     bottom: 10rem;
@@ -415,6 +415,7 @@ p {
   transition: all ease-in-out 0.3s;
   border: 2px solid #f2f2f2;
   background-color: #ffffff;
+  /* border: solid 1px ; */
 }
 /* .service-card-container div {
 
