--- a/style.css
+++ b/style.css
@@ -226,6 +226,8 @@
 /* section 3, this is the card section */
 .section-3 {
   background-color: #f2f2f2;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .section-3 .row {
@@ -250,12 +252,13 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(255, 255, 255, 1);
-  border: 1px solid rgba(215, 215, 215, 1);
+  border: 4px solid #f2f2f2;
   transition: all ease 0.3s;
   padding: 1rem 0;
 }
 .section-3 .items:hover {
   background: rgba(223, 218, 237, 1);
+  border: 4px solid #f2f2f2;
 }
 .section-3 .items:hover div {
   background-color: red;
