--- a/style.css
+++ b/style.css
@@ -265,6 +265,11 @@
   transition: all ease 0.3s;
   padding: 1rem 0;
 }
+.section-3 .items h3 {
+  text-align: start;
+  width: 60%;
+  /* background-color: red; */
+}
 .section-3 .items:hover {
   background: rgba(223, 218, 237, 1);
   border: 4px solid #f2f2f2;
