--- a/style.css
+++ b/style.css
@@ -254,7 +254,10 @@
   font-weight: bold;
   font-size: 300%;
 }
-
+.section-3 .items .linediv {
+  width: 60%;
+  margin-top: 6rem;
+}
 .section-3 .items {
   display: flex;
   flex-direction: column;
@@ -268,13 +271,14 @@
 .section-3 .items h3 {
   text-align: start;
   width: 60%;
+  margin-top: 2rem;
   /* background-color: red; */
 }
 .section-3 .items:hover {
   background: rgba(223, 218, 237, 1);
   border: 4px solid #f2f2f2;
 }
-.section-3 .items:hover div {
+.section-3 .items:hover .arrows {
   background-color: red;
 }
 .section-3 .items div {
@@ -282,7 +286,7 @@
 }
 .section-3 p {
   height: 10rem;
-  padding: 20%;
+  padding: 10% 20%;
   justify-items: center;
   align-content: center;
 }
