--- a/style.css
+++ b/style.css
@@ -126,7 +126,8 @@
     width: 20%;
   }
   .section-3 {
-    padding: 0 15rem;
+    padding: 0rem 20rem;
+    margin: 0rem 0;
   }
   .top-section {
     padding: 12rem;
@@ -235,8 +236,8 @@
 /* section 3, this is the card section */
 .section-3 {
   background-color: #f2f2f2;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
 }
 
 .section-3 .row {
