--- a/style.css
+++ b/style.css
@@ -144,6 +144,11 @@
     background: rgba(255, 255, 255, 1);
     padding: 2rem 10rem;
   }
+
+  /* footer   */
+  footer {
+    padding: 12rem !important;
+  }
 }
 
 /* tablet */
@@ -156,6 +161,10 @@
   }
   .section-3 {
     padding: 0 3rem;
+  }
+
+  footer {
+    padding: 2rem !important;
   }
 }
 
@@ -391,9 +400,10 @@
 }
 
 /* footer  */
+
 footer {
   background: rgba(9, 3, 25, 1);
-  padding: 2rem;
+  /* padding: 2rem; */
 
   color: white;
 }
