--- a/pages/pages.css
+++ b/pages/pages.css
@@ -19,6 +19,7 @@ body {
   }
   header {
     height: 30rem;
+
     position: relative;
   }
 
@@ -39,8 +40,9 @@ body {
   }
 
   /* section 2 view for desktop  */
-  /* .about-header {
-  } */
+  .about-header {
+    padding: 12rem;
+  }
   .image-container {
     width: 30rem;
     height: 40rem;
@@ -203,6 +205,7 @@ body {
   }
 
   /* section 3 desktop view  */
+
   /* .section-3 {
    
   } */
