--- a/createaccount/accountstyles.css
+++ b/createaccount/accountstyles.css
@@ -63,7 +63,7 @@ header {
     width: 70%;
   }
   .mulstep-btn-cont .btn {
-    width: 5rem;
+    width: 30%;
   }
 
   /* these styles are for the download resource page.... mobile view  */
