--- a/createaccount/accountstyles.css
+++ b/createaccount/accountstyles.css
@@ -40,6 +40,7 @@ header {
     justify-content: center;
     width: 13rem;
   }
+
   .create-info-wrapper .row {
     display: flex;
     /* flex-direction: column; */
@@ -96,7 +97,7 @@ header {
 
   background-color: #f2f2f2;
   margin: 1rem;
-  padding: 3rem;
+  padding: 3rem 1rem;
   border-radius: 40px;
 }
 
