fixed semi small screens

--- a/style.css
+++ b/style.css
@@ -392,12 +392,10 @@
 }
 /* below style for mobile  */
 @media only screen and (max-device-width: 768px) {
-  /* .live-data {
+  .section-2 .live-data {
     display: flex;
-  } */
-  /* .clock-img-container {
-    display: none;
-  } */
+    flex-direction: column;
+  }
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
